--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.816fa.com//liebiao/6415B18ACDAD907B"target="_blank">哔哩组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="https://w.xznkf.cn/d1/df7688">哔哩租号售后</a>
   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.816fa.com//liebiao/F5224A1DBFC14FEA"target="_blank">赛赛组号</a>
-           <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://xzn2.cn/d1/486008"target="_blank">赛赛组号售后</a>
+           <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://w.xznkf.cn/d1/486008"target="_blank">赛赛组号售后</a>
  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.816fa.com//liebiao/D0E2E6EBD17D1708"target="_blank">幸运组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/st6950"target="_blank">幸运租号售后</a>
 <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://www.816fa.com//liebiao/FA473E7E21738974"target="_blank">迪斯组号</a>
