--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            <a style="border-radius:10px;padding:7px 30px;color:#57ecfb;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/tv4003">怪兽租号售后</a> 
 
  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D4DDE22603460338"target="_blank">哔哩组号</a>
-           <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="http://www.is998.com/">哔哩租号售后</a> -->
+           <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="http://www.is998.com/">哔哩租号售后</a>
   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/F5224A1DBFC14FEA"target="_blank">赛赛组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://w.xznkf.cn/d1/486008"target="_blank">赛赛组号售后</a>
  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D0E2E6EBD17D1708"target="_blank">幸运组号</a>
