--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div style="text-align:center;border-width:0px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#91797900;border-radius:20px;">
           <p>
           	<img style="border-radius:50%;max-width:100px;max-height:100px;" src="http://q2.qlogo.cn/headimg_dl?dst_uin=10001&spec=100"></p>
-             <h1 style="color:#fff;"><strong>已加货 售后问题联系下方网页售后</strong></br><strong>店铺点击后不跳转 请用电脑浏览器访问</strong>
+             <h1 style="color:#fff;"><strong>售后问题联系下方网页售后</strong></br><strong>如果链接打不开 换个网络或者换成手机再尝试</strong>
              </h1>
            <p style="font-size:3vh;color:#fff;"></p>
 		   <p style="font-size:3vh;color:#fff;"></p>
@@ -21,14 +21,14 @@
          
         
 <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D4DDE22603460338">怪兽租号</a>
-           <a style="border-radius:10px;padding:7px 30px;color:#57ecfb;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/tv4003">怪兽租号售后</a> 
+           <a style="border-radius:10px;padding:7px 30px;color:#57ecfb;border-style:solid;text-decoration:none;" href="https://w.xznw2.com/d1/tv4003">怪兽租号售后</a> 
 
  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D4DDE22603460338"target="_blank">哔哩组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="http://www.is998.com/">哔哩租号售后</a>
   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/F5224A1DBFC14FEA"target="_blank">赛赛组号</a>
-           <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://w.xznkf.cn/d1/486008"target="_blank">赛赛组号售后</a>
+           <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://w.xznw2.com/d1/486008"target="_blank">赛赛组号售后</a>
  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D0E2E6EBD17D1708"target="_blank">幸运组号</a>
-           <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/st6950"target="_blank">幸运租号售后</a>
+           <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="https://w.xznw2.com/d1/st6950"target="_blank">幸运租号售后</a>
 <!--<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/FA473E7E21738974"target="_blank">迪斯组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#0095ff;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/475890 "target="_blank">迪斯组号售后</a> -->
   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/881175933941D251"target="_blank">少尉排位号</a>
