--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		   
 <!--<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/FA473E7E21738974"target="_blank">迪斯组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#0095ff;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/475890 "target="_blank">迪斯组号售后</a> -->
-  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/881175933941D251"target="_blank">少尉排位号</a>
+<!--  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/881175933941D251"target="_blank">少尉排位号</a>-->
    
  <a style="border-radius:10px;padding:7px 30px;color:#f00;border-style:solid;text-decoration:none;" href="https://app.yinxiang.com/b/sTEFp"target="_blank">如何查询订单</a> 
          
