--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/F5224A1DBFC14FEA"target="_blank">赛赛组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#2bf38d;border-style:solid;text-decoration:none;" href="https://w.xznw2.com/d1/486008"target="_blank">赛赛组号售后</a>
 		   
- <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D0E2E6EBD17D1708"target="_blank">幸运组号</a>
+<!-- <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/D0E2E6EBD17D1708"target="_blank">幸运组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#fb5757;border-style:solid;text-decoration:none;" href="https://w.xznw2.com/d1/st6950"target="_blank">幸运租号售后</a>
 		   
-<!--<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/FA473E7E21738974"target="_blank">迪斯组号</a>
+<a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/FA473E7E21738974"target="_blank">迪斯组号</a>
            <a style="border-radius:10px;padding:7px 30px;color:#0095ff;border-style:solid;text-decoration:none;" href="http://w.xznkf.cn/d1/475890 "target="_blank">迪斯组号售后</a> -->
 <!--  <a style="border-radius:10px;padding:7px 30px;color:#fff;border-style:solid;text-decoration:none;" href="https://mall.816o.com//liebiao/881175933941D251"target="_blank">少尉排位号</a>-->
    
