--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div style="text-align:center;border-width:0px;border-style:solid;border-color:rgb(2, 204, 245);background-color:#91797900;border-radius:20px;">
           <p>
           	<img style="border-radius:50%;max-width:100px;max-height:100px;" src="http://q2.qlogo.cn/headimg_dl?dst_uin=10001&spec=100"></p>
-             <h1 style="color:#fff;"><strong>售后问题联系下方网页售后</strong></br><strong>如果链接打不开 换个网络或者换成手机再尝试</strong>
+             <h1 style="color:#fff;"><strong>无限期停更</strong></br><strong>飞机✈️：@CFWG521 </strong>
              </h1>
            <p style="font-size:3vh;color:#fff;"></p>
 		   <p style="font-size:3vh;color:#fff;"></p>
