--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
                    </script></span>
          
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
-   
+ <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="fa6a667b-43eb-4ded-8175-b4717dca438f";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
 </html>
