--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <a href="https://w.xznw2.com/aa/1?appid=12492&yzm=tv1a3ctv4t&zy=1" target="_blank">矮油组号售后</a>
     </div>
 	<div class="button-group">
-	    <a href="https://easylink.cc/jpwjqz"target="_blank">自助补号视频教程</a>
+	    <a href=https://cccimg.com/view.php/694dffc49005ddf252fb1f286e3c8ee3.mp4"target="_blank">自助补号视频教程</a>
 	</div>
 </div>
 <script>
